@@ -28,7 +28,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Env-Browser
-  homepage: https://github.com/tupinek/Env-Browser
+  homepage: https://github.com/michal-josef-spacek/Env-Browser
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Env-Browser
+  repository: git://github.com/michal-josef-spacek/Env-Browser
 version: '0.06'
