@@ -19,8 +19,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Env-Browser';
-resources 'homepage' => 'https://github.com/tupinek/Env-Browser';
-resources 'repository' => 'git://github.com/tupinek/Env-Browser';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Env-Browser';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Env-Browser';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Output' => 1.02;
