@@ -67,7 +67,7 @@ SEE ALSO
         URL extractor/launcher
 
 REPOSITORY
-    <https://github.com/tupinek/Env-Browser>
+    <https://github.com/michal-josef-spacek/Env-Browser>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
