@@ -1,6 +1,7 @@
 0.06
  - Fix Makefile.PL fails with no '.' in @INC.
  - Update Module::Install to 1.19 version.
+ - Update author github username.
  - Update author name.
  - Update copyright years.
 
